...
                      ),
                    ),
                    const SizedBox(height: 30),
                    AnimatedTextKit(
                      animatedTexts: [
                        TyperAnimatedText(
                          'Hedieaty',
                          textStyle: TextStyle(
                            fontSize: 32,
                            fontWeight: FontWeight.bold,
                            fontFamily: "Pacifico",
                            color: Theme.of(context).colorScheme.primary,
                          ),
...
                      stopPauseOnTap: true,
                      key: const ValueKey('animated_text'),
                    ),
                  ],
                  const SizedBox(height: 20),
                  Text(
                    _isSignUp ? 'Create Account' : 'Welcome Back',
                    style: TextStyle(
                      fontSize: 24,
                      fontWeight: FontWeight.bold,
                      color: Theme.of(context).colorScheme.primary,
                    ),
                  ),
...
                  ),
                  if (_isSignUp) ...[
                    const SizedBox(height: 16),
                    defaultFormField(
                      controller: _usernameController,
                      type: TextInputType.text,
                      label: 'Username',
                      hintText: 'Enter your username',
                      prefix: Icons.person,
                      suffix: null,
                      key: const ValueKey('username_field'),
                      validate: (value) {
                        if (value == null || value.isEmpty) {
...
                            child: CircularProgressIndicator(
                              valueColor:
                                  AlwaysStoppedAnimation<Color>(Colors.white),
                              strokeWidth: 2,
                            ),
                          )
                        : Text(_isSignUp ? 'Sign Up' : 'Sign In'),
                  ),
                  const SizedBox(height: 20),
                  GestureDetector(
                    onTap: _toggleSignUp,
                    child: Text(
                      _isSignUp
                          ? 'Already have an account? Sign In'
                          : 'Don\'t have an account? Sign Up',
                      style: TextStyle(
                        color: Theme.of(context).colorScheme.primary,
                        fontWeight: FontWeight.w500,
                      ),
                    ),
                  ),
...
