...
                        child: ProfilePage(),
                        type: PageTransitionType.leftToRight));
              },
              leading: const Icon(Icons.person),
            ),
            ListTile(
              title: const Text('My Event List'),
              onTap: () {
                Navigator.push(
                    parentContext,
                    PageTransition(
                        child: EventListPage(
                          user: user,
...
                        child: PledgedGiftPage(),
                        type: PageTransitionType.leftToRight));
              },
              leading: const Icon(Icons.card_giftcard),
            ),
            ListTile(
              title: const Text('Add Friend'),
              onTap: () {
                showDialog(
                    barrierDismissible: false,
                    context: parentContext,
                    builder: (BuildContext context) => AlertDialog(
                          title: Text('Add Friend'),
...
                                                        RoundedRectangleBorder(
                                                      borderRadius:
                                                          BorderRadius.circular(
                                                              8.0),
                                                    ),
                                                    elevation: 0.0),
                                                child: Text('Add'),
                                              ),
                                            ],
                                          ));
                                },
                                icon: Icon(Icons.person_add),
                                label: Text('Username'),
...
                        ));
              },
              leading: const Icon(Icons.person_add),
            ),
            defaultDivider(parentContext),
            ListTile(
              title: const Text('Sign Out'),
              onTap: () async {
                await userController.signOut(parentContext);
                Navigator.pushReplacementNamed(parentContext, '/');
              },
              leading: const Icon(Icons.logout),
            ),
...
