...
}

class _GiftListPageState extends State<GiftListPage>
    with SingleTickerProviderStateMixin {
  static const List<Tab> tabs = <Tab>[
    Tab(icon: Icon(Icons.card_giftcard), text: 'Unpledged'),
    Tab(icon: Icon(Icons.check_circle), text: 'Pledged'),
  ];
  late Future<List<GiftModel>> _giftsFuture;
  final GiftsController _giftsController = GiftsController.instance;
  GiftCategory? selectedCategory;

  late TabController tabController;
...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('My Gift List'),
        actions: [
          PopupMenuButton<String>(
            icon: Icon(Icons.filter_list),
            onSelected: (String result) {
              if (result == 'name') {
                setState(() {
...
              children: [
                eventDetailCard(context, widget.event),
                Padding(
                  padding: const EdgeInsets.symmetric(
                      horizontal: 16.0, vertical: 4.0),
                  child: InkWell(
                    key: Key('addGiftButton'),
                    onTap: () async {
                      final result = await Navigator.push(
                        context,
                        PageTransition(
                            child: GiftCreatePage(
                              event: widget.event,
...
